# Aether

./: .gitignore  README.md  deps.ts  mod.ts
src/: Client.ts
src/constants/: Constants.ts  Intents.ts  OPCodes.ts
src/network/: Endpoints.ts
src/network/gateway/: Etf.ts  Shard.ts
src/network/rest/: REST.ts
src/orm/: ORM.ts  readme.md
src/plugin/: PluginBase.ts  PluginRegistry.ts  Structure.ts  readme.md
src/plugin/cli/: CLI.ts
src/plugin/hooks/: EventHook.ts
src/plugin/util/: Override.ts  parseYaml.ts
src/structures/: Base.ts  Message.ts  User.ts
src/structures/channels/: CategoryChannel.ts  Channel.ts  GuildChannel.ts  TextChannel.ts  VoiceChannel.ts
src/structures/guild/: Emoji.ts  Guild.ts  Invite.ts  Member.ts  Role.ts
src/structures/options/: ChannelOptions.ts  MemberOptions.ts  RoleOptions.ts
src/structures/permissions/: Permission.ts  PermissionOverwrite.ts  Permissions.ts
src/util/: Collection.ts  Logger.ts  SecureDataStore.ts
src/voice/: Cargo.toml  readme.md
src/voice/lib/: Voice.ts
src/voice/src/: lib.rs
tests/: test.ts
