[package]
name = "aether-voice"
version = "0.1.0"
authors = ["Cqdet"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
audiopus_sys = "0.1"
wasm-bindgen = "0.2.69"

[profile.release]
opt-level = "s"

[target.x86_64-unknown-linux-gnu]
rustflags = [
    "-C", "link-arg=-fuse-ld=lld",
]